versioned_docs/version-2.0/reference/subsystems/bandit.mdx
---
title: bandit
description: |
  A tool for finding security issues in Python code (https://bandit.readthedocs.io).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A tool for finding security issues in Python code (https://bandit.readthedocs.io).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[bandit]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--bandit-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_BANDIT_ARGS'
  toml_repr={`[bandit]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Bandit, e.g. `--bandit-args="--skip B101,B308 --confidence"`

</Option>

### `skip`

<Option
  cli_repr={`--[no-]bandit-skip`}
  env_repr='PANTS_BANDIT_SKIP'
  toml_repr={`[bandit]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use Bandit when running `/home/josh/work/scie-pants/dist/pants lint`

</Option>

## Advanced options

### `config`

<Option
  cli_repr={`--bandit-config=<file_option>`}
  env_repr='PANTS_BANDIT_CONFIG'
  toml_repr={`[bandit]
config = <file_option>`}
  default_repr={`None`}
>

Path to a Bandit YAML config file

</Option>

### `entry_point`

<Option
  cli_repr={`--bandit-entry-point=<str>`}
  env_repr='PANTS_BANDIT_ENTRY_POINT'
  toml_repr={`[bandit]
entry_point = <str>`}
  default_repr={`bandit`}
>

The main module for the tool. Usually, you will not want to change this from the default.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--bandit-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BANDIT_EXTRA_REQUIREMENTS'
  toml_repr={`[bandit]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "setuptools<45",\n  "stevedore<3"\n]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `version`

<Option
  cli_repr={`--bandit-version=<str>`}
  env_repr='PANTS_BANDIT_VERSION'
  toml_repr={`[bandit]
version = <str>`}
  default_repr={`bandit>=1.6.2,<1.7`}
>

Requirement string for the tool.

</Option>

## Deprecated options

### `interpreter_constraints`

<Option
  cli_repr={`--bandit-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_BANDIT_INTERPRETER_CONSTRAINTS'
  toml_repr={`[bandit]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
  removal_version='2.1.0.dev0'
  removal_hint={'This option no longer does anything, as Pants auto-configures the interpreter constraints for bandit based on your code\'s interpreter constraints.'}
>

Python interpreter constraints for this tool.

</Option>

## Related subsystems

None

</span>
